--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -4,23 +4,43 @@
       <mat-card-title>REURB</mat-card-title>
     </mat-card-header>
 
-    <mat-card-content>
-      <mat-form-field>
-        <mat-label>CPF</mat-label>
-        <input matInput [(ngModel)]="usuario.cpf" />
-      </mat-form-field>
+    <mat-tab-group >
+      <mat-tab  label="Usuário"> 
+        <mat-card-content>
+          <mat-form-field>
+            <mat-label>CPF</mat-label>
+            <input matInput [(ngModel)]="usuario.cpf" />
+          </mat-form-field>
+    
+          <mat-form-field>
+            <mat-label>Senha</mat-label>
+            <input matInput type="password"  [(ngModel)]="usuario.senha" />
+          </mat-form-field>
+    
+          <button mat-raised-button [disabled]="usuario.senha == '' || usuario.cpf == ''" color="primary" (click)="login()">Entrar</button>
+          <div class="login-links">
+            <a href="#">Esqueci minha senha</a>
+            <span class="divider">|</span>
+            <a routerLink="/usuario/novo/cadastro">Cadastrar</a>
+          </div>
+        </mat-card-content>
+      </mat-tab>
+      <mat-tab  label="Contratante"> 
+        <mat-card-content>
+        
+          <mat-form-field>
+            <mat-label>E-mail</mat-label>
+            <input matInput [(ngModel)]="contratante.email" />
+          </mat-form-field>
+          <mat-form-field>
+            <mat-label>CPF / CNPJ</mat-label>
+            <input matInput [(ngModel)]="contratante.cpf" />
+          </mat-form-field>
+    
+          <button mat-raised-button color="primary" [disabled]="contratante.email == '' || contratante.cpf == ''" (click)="loginContratante()">Entrar</button>
+        </mat-card-content>
+      </mat-tab>
+    </mat-tab-group>
 
-      <mat-form-field>
-        <mat-label>Senha</mat-label>
-        <input matInput type="password"  [(ngModel)]="usuario.senha" />
-      </mat-form-field>
-
-      <button mat-raised-button color="primary" (click)="login()">Entrar</button>
-      <div class="login-links">
-        <a href="#">Esqueci minha senha</a>
-        <span class="divider">|</span>
-        <a routerLink="/usuario/novo/cadastro">Cadastrar</a>
-      </div>
-    </mat-card-content>
   </mat-card>
 </div>
