--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,8 +1,16 @@
 <div class="login-container">
-  <mat-card>
+  <mat-card   [style.width]="'600px'">
     <mat-card-header>
-      <mat-card-title>REURB</mat-card-title>
+      <mat-card-title>{{title}}</mat-card-title>
     </mat-card-header>
+    <mat-form-field >
+      <mat-label>Franqueado:</mat-label>
+      <mat-select  (selectionChange)="changeEmpresa($event)" [(ngModel)]="empresaId" >
+        <mat-option *ngFor="let empresa of empresasList;" [value]="empresa.id" >
+          {{ empresa?.companyIdentifier + " - " + empresa?.nome}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
 
     <mat-tab-group >
       <mat-tab  label="Usuário"> 
@@ -27,17 +35,12 @@
       </mat-tab>
       <mat-tab  label="Contratante"> 
         <mat-card-content>
-        
-          <mat-form-field>
-            <mat-label>E-mail</mat-label>
-            <input matInput [(ngModel)]="contratante.email" />
-          </mat-form-field>
-          <mat-form-field>
+          <mat-form-field >
             <mat-label>CPF / CNPJ</mat-label>
             <input matInput [(ngModel)]="contratante.cpf" />
           </mat-form-field>
     
-          <button mat-raised-button color="primary" [disabled]="contratante.email == '' || contratante.cpf == ''" (click)="loginContratante()">Entrar</button>
+          <button mat-raised-button color="primary" [disabled]="contratante.cpf == ''" (click)="loginContratante()">Entrar</button>
         </mat-card-content>
       </mat-tab>
     </mat-tab-group>
