--- a/src/app/pages/vendedores/vendedor-form/vendedor-form.component.html
+++ b/src/app/pages/vendedores/vendedor-form/vendedor-form.component.html
@@ -59,7 +59,7 @@
     
           <div class="inputs-row-form">
             <mat-form-field>
-              <mat-label *ngIf="cpfFormControl.value && cpfFormControl.value.length <= 11">CPF</mat-label>
+              <mat-label *ngIf="cpfFormControl.value && cpfFormControl.value.length <= 11 || cpfFormControl.value == ''">CPF</mat-label>
               <mat-label *ngIf="cpfFormControl.value && cpfFormControl.value.length > 11">CNPJ</mat-label>
               <input [readonly]="visualizar"  matInput [formControl]="cpfFormControl" />
               <mat-error *ngIf="cpfFormControl.hasError('cpfInvalido')">CPF inválido</mat-error>
